Add accounts Endpoint and Logic
